operator/pkg/gateway-api/testdata/gateway/tcproute-crd-not-installed/input/tcproute-crd-not-installed.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-tcproute
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - name: tcp
      port: 8080
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TCPRoute
---
apiVersion: v1
kind: Service
metadata:
  name: tcp-backend-simple
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tcp-backend-simple
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
